Fix coordinate transformations between plugins and context menus.

This CL fixes two issues. (1) Coordinates sent from PDF plugins used to
need adjustment in render_view_context_menu.cc since they were not
properly converted to root view coordinates before arriving there. With
the addition of TransformPointToRootView() to RenderWidgetHostViewGuest
this is no longer the case, so the adjustment code has been removed.

(2) However, when invoking view messages to the plugin in
RenderViewHostImpl, up until now the root coords were never converted,
nor did they need to be since the context menu managed to send the
pre-adjustment values back. But now the context menu receives the proper
coords in the first place, they need to be converted back to view space
coords. This required implementing TransformPointToLocalCoordSpace, and
a new helper TransformRootPointToViewCoords, to
RenderWidgetHostViewGuest. The helper function may also need to be
implemented for RenderWidgetHostViewChildFrame at some point in the
future.

Bug: 775460, 775461
Change-Id: Icfb901295484657535e76007bee79b5cd1da8be8